[gd_scene load_steps=14 format=3 uid="uid://c644ebrhpm4xk"]

[ext_resource type="Script" path="res://main.gd" id="1_3qic0"]
[ext_resource type="Texture2D" uid="uid://cinuqyhuwn8d0" path="res://images/Background/Green.png" id="1_wl44x"]
[ext_resource type="Script" path="res://Background.gd" id="2_ctyn1"]
[ext_resource type="FontFile" uid="uid://cqhdhu44t6cgd" path="res://fonts/comic.ttf" id="4_mvdss"]
[ext_resource type="PackedScene" uid="uid://mkk2omdf4wp0" path="res://fruit.tscn" id="5_poivj"]
[ext_resource type="Texture2D" uid="uid://hiy88uxinxq1" path="res://images/croc/croc_side_mouthopen@2x.png" id="6_7gy3g"]
[ext_resource type="Texture2D" uid="uid://dkyi7xru43c1v" path="res://images/Buttons/Restart.png" id="6_t5t2j"]
[ext_resource type="Texture2D" uid="uid://biflu0ltrabiv" path="res://images/croc/croc_side_mouthclosed@2x.png" id="7_8fqev"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_osp1n"]
bg_color = Color(0.756863, 0.341176, 1, 0.478431)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.6, 0, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nre5r"]
bg_color = Color(0.917647, 0.807843, 1, 0.478431)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.6, 0, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kw444"]
bg_color = Color(0.682353, 0.243137, 0.870588, 1)
border_color = Color(0.6, 0, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SpriteFrames" id="SpriteFrames_8e7yq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_7gy3g")
}, {
"duration": 1.0,
"texture": ExtResource("7_8fqev")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3s8me"]

[node name="Main" type="Node"]
script = ExtResource("1_3qic0")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
texture = ExtResource("1_wl44x")
centered = false
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 800, 600)
script = ExtResource("2_ctyn1")

[node name="LeftGrid" type="GridContainer" parent="."]
offset_left = 37.0
offset_top = 25.0
offset_right = 303.0
offset_bottom = 237.0
theme_override_constants/h_separation = 9
theme_override_constants/v_separation = 9
columns = 5

[node name="Fruit" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit2" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit5" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit6" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit4" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit3" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit7" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit8" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit9" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit10" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit11" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit12" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit13" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit14" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit15" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit16" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit17" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit18" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit20" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit19" parent="LeftGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="RightGrid" type="GridContainer" parent="."]
offset_left = 515.0
offset_top = 25.0
offset_right = 787.0
offset_bottom = 220.0
theme_override_constants/h_separation = 9
theme_override_constants/v_separation = 9
columns = 5

[node name="Fruit" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit2" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit5" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit6" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit4" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit3" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit7" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit8" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit9" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit10" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit11" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit12" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit13" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit14" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit15" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit16" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit17" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit18" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit20" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="Fruit19" parent="RightGrid" instance=ExtResource("5_poivj")]
layout_mode = 2

[node name="NumberSlotNumber" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.0
offset_top = -121.5
offset_right = 344.0
offset_bottom = 123.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LeftNum" type="Label" parent="NumberSlotNumber"]
custom_minimum_size = Vector2(214, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_mvdss")
theme_override_font_sizes/font_size = 175
text = "13"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="NumberSlotNumber"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2

[node name="Slot" type="Panel" parent="NumberSlotNumber"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_osp1n")

[node name="Hovered" type="Panel" parent="NumberSlotNumber/Slot"]
visible = false
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_nre5r")

[node name="Spacer2" type="Control" parent="NumberSlotNumber"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2

[node name="RightNum" type="Label" parent="NumberSlotNumber"]
custom_minimum_size = Vector2(214, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_mvdss")
theme_override_font_sizes/font_size = 175
text = "13"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -177.0
offset_right = 270.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
alignment = 1

[node name="LessThan" type="Panel" parent="Options"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_kw444")

[node name="Label" type="Label" parent="Options/LessThan"]
layout_mode = 1
offset_left = 17.0
offset_top = -119.0
offset_right = 144.0
offset_bottom = 230.0
scale = Vector2(-1, 1)
pivot_offset = Vector2(60, 156)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_mvdss")
theme_override_font_sizes/font_size = 250
text = ">"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Options"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2

[node name="GreaterThan" type="Panel" parent="Options"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_kw444")

[node name="Label" type="Label" parent="Options/GreaterThan"]
layout_mode = 0
offset_left = 17.0
offset_top = -119.0
offset_right = 144.0
offset_bottom = 230.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_mvdss")
theme_override_font_sizes/font_size = 250
text = ">"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="Options"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2

[node name="EqualTo" type="Panel" parent="Options"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_kw444")

[node name="Label" type="Label" parent="Options/EqualTo"]
layout_mode = 0
offset_left = 16.0
offset_top = -123.0
offset_right = 144.0
offset_bottom = 226.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("4_mvdss")
theme_override_font_sizes/font_size = 250
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="CrocTimer" type="Timer" parent="."]
wait_time = 5.4
one_shot = true

[node name="CrocGreaterThan" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(507, 104)
rotation = -0.333358
sprite_frames = SubResource("SpriteFrames_8e7yq")
frame_progress = 0.715453

[node name="CrocLessThan" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(296, 103)
rotation = 0.333358
sprite_frames = SubResource("SpriteFrames_8e7yq")
frame_progress = 0.317038
flip_h = true

[node name="Restart" type="Button" parent="."]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -34.0
offset_top = -3.0
offset_right = 4.0
offset_bottom = 35.0
grow_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_3s8me")
icon = ExtResource("6_t5t2j")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="gui_input" from="Options/LessThan" to="." method="_on_less_than_gui_input"]
[connection signal="gui_input" from="Options/GreaterThan" to="." method="_on_greater_than_gui_input"]
[connection signal="gui_input" from="Options/EqualTo" to="." method="_on_equal_to_gui_input"]
[connection signal="button_down" from="Restart" to="." method="_on_restart_button_down"]
[connection signal="button_up" from="Restart" to="." method="_on_restart_button_up"]
[connection signal="mouse_entered" from="Restart" to="." method="_on_restart_mouse_entered"]
